--- a/WatchStore.Data/WatchStore.Data.csproj
+++ b/WatchStore.Data/WatchStore.Data.csproj
@@ -65,7 +65,9 @@
     <Compile Include="Category.cs">
       <DependentUpon>WatchStoreDbModels.tt</DependentUpon>
     </Compile>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Contact.cs">
+      <DependentUpon>WatchStoreDbModels.tt</DependentUpon>
+    </Compile>
     <Compile Include="C__MigrationHistory.cs">
       <DependentUpon>WatchStoreDbModels.tt</DependentUpon>
     </Compile>
