--- a/WatchStore.Logic/packages.config
+++ b/WatchStore.Logic/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.1" targetFramework="net471" />
   <package id="Microsoft.Extensions.Options" version="3.1.1" targetFramework="net471" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.1" targetFramework="net471" />
+  <package id="MultipartDataMediaFormatter.V2" version="2.0.2" targetFramework="net471" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
   <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net471" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net471" />
